# python-craw

./: .gitignore  QUICK_SETUP.md  README.md  config.json.example  main.py  pyproject.toml  trending_daily.py  zread_trending_daily.py  zread_trending_report_20251209.md
.cursor/rules/: uv-for-python.mdc
.github/workflows/: README.md  daily-report.yml  manual-report.yml
config/: __init__.py  config.py
docs/: 使用说明.md  开发文档.md  配置GitHub-Secret.md
notifiers/: __init__.py  email.py  wechat.py
scripts/: README.md  configure_github_secret.sh  setup_github_secret.py
templates/: report.html.j2  report.md.j2
