[project]
name = "python-craw"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "deep-translator>=1.11.4",
    "jinja2>=3.1.0",
    "lxml>=6.0.2",
    "playwright>=1.56.0",
    "requests>=2.31.0",
    "schedule>=1.2.0",
    "tqdm>=4.66.0",
]
